src/test/ui/parser/keyword-final.stderr
error: expected pattern, found reserved keyword `final`
  --> $DIR/keyword-final.rs:2:9
   |
LL |     let final = ();
   |         ^^^^^ expected pattern

error: aborting due to previous error

